--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -60,6 +60,19 @@
          </widget>
         </item>
         <item>
+         <widget class="QTextEdit" name="lyricEdit">
+          <property name="minimumHeight">
+           <number>100</number>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
          <layout class="QVBoxLayout" name="controlLayout">
           <item>
            <widget class="QLabel" name="titleLabel">
