--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -148,6 +148,27 @@
       <widget class="QWidget" name="rightWidget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
+         <layout class="QHBoxLayout" name="playlistHeaderLayout">
+          <item>
+           <widget class="QLabel" name="playlistLabel">
+            <property name="text">
+             <string>播放列表</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="playModeButton">
+            <property name="text">
+             <string>顺序</string>
+            </property>
+            <property name="toolTip">
+             <string>当前播放模式：顺序</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
          <widget class="QListWidget" name="playlistWidget"/>
         </item>
         <item>
