--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -11,195 +11,42 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>音乐播放器</string>
+   <string>YinYue</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="QWidget" name="leftWidget" native="true">
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <layout class="QHBoxLayout" name="libraryHeaderLayout">
-          <item>
-           <widget class="QLabel" name="libraryLabel">
-            <property name="text">
-             <string>音乐库</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="dlnaButton">
-            <property name="text">
-             <string>DLNA</string>
-            </property>
-            <property name="checkable">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="QStackedWidget" name="libraryStack">
-          <property name="currentIndex">
-           <number>0</number>
-          </property>
-          <widget class="QWidget" name="localPage">
-           <layout class="QVBoxLayout" name="verticalLayout_4">
-            <item>
-             <widget class="QListWidget" name="libraryWidget"/>
-            </item>
-           </layout>
-          </widget>
-          <widget class="QWidget" name="dlnaPage">
-           <layout class="QVBoxLayout" name="verticalLayout_5">
-            <item>
-             <widget class="QListWidget" name="dlnaDeviceList"/>
-            </item>
-            <item>
-             <layout class="QHBoxLayout" name="dlnaButtonLayout">
-              <item>
-               <widget class="QPushButton" name="refreshDLNAButton">
-                <property name="text">
-                 <string>刷新设备</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="disconnectDLNAButton">
-                <property name="text">
-                 <string>断开连接</string>
-                </property>
-                <property name="enabled">
-                 <bool>false</bool>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-           </layout>
-          </widget>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="centerWidget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <widget class="QTextEdit" name="lyricEdit">
-          <property name="minimumSize">
-           <size>
-            <width>400</width>
-            <height>300</height>
-           </size>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
+         <widget class="QListView" name="playlistView"/>
         </item>
         <item>
-         <layout class="QVBoxLayout" name="controlLayout">
+         <layout class="QHBoxLayout" name="playlistControlLayout">
           <item>
-           <widget class="QLabel" name="titleLabel">
-            <property name="font">
-             <font>
-              <pointsize>12</pointsize>
-              <bold>true</bold>
-             </font>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
+           <widget class="QPushButton" name="addButton">
+            <property name="text">
+             <string>添加</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="artistLabel">
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
+           <widget class="QPushButton" name="removeButton">
+            <property name="text">
+             <string>移除</string>
             </property>
            </widget>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="timeLayout">
-            <item>
-             <widget class="QLabel" name="currentTimeLabel">
-              <property name="text">
-               <string>00:00</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSlider" name="progressSlider">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="totalTimeLabel">
-              <property name="text">
-               <string>00:00</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="buttonLayout">
-            <item>
-             <widget class="QPushButton" name="previousButton">
-              <property name="text">
-               <string>上一首</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="playButton">
-              <property name="text">
-               <string>播放</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="nextButton">
-              <property name="text">
-               <string>下一首</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="volumeLayout">
-            <item>
-             <widget class="QLabel" name="volumeLabel">
-              <property name="text">
-               <string>音量</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSlider" name="volumeSlider">
-              <property name="maximum">
-               <number>100</number>
-              </property>
-              <property name="value">
-               <number>50</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-           </layout>
+           <widget class="QPushButton" name="clearButton">
+            <property name="text">
+             <string>清空</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -208,42 +55,121 @@
       <widget class="QWidget" name="rightWidget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <layout class="QHBoxLayout" name="playlistHeaderLayout">
+         <widget class="QLabel" name="currentSongLabel">
+          <property name="text">
+           <string>No song playing</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="timeLayout">
           <item>
-           <widget class="QLabel" name="playlistLabel">
+           <widget class="QLabel" name="currentTimeLabel">
             <property name="text">
-             <string>播放列表</string>
+             <string>00:00</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="playModeButton">
-            <property name="text">
-             <string>顺序</string>
+           <widget class="QSlider" name="positionSlider">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
             </property>
-            <property name="toolTip">
-             <string>当前播放模式：顺序</string>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="totalTimeLabel">
+            <property name="text">
+             <string>00:00</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
-         <widget class="QListWidget" name="playlistWidget"/>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="playlistButtonLayout">
+         <layout class="QHBoxLayout" name="controlLayout">
           <item>
-           <widget class="QPushButton" name="clearPlaylistButton">
+           <widget class="QPushButton" name="previousButton">
             <property name="text">
-             <string>清空播放列表</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset theme="media-skip-backward"/>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="removeSelectedButton">
+           <widget class="QPushButton" name="playButton">
             <property name="text">
-             <string>移除选中</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset theme="media-playback-start"/>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="stopButton">
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset theme="media-playback-stop"/>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="nextButton">
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset theme="media-skip-forward"/>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="volumeLayout">
+          <item>
+           <widget class="QLabel" name="volumeLabel">
+            <property name="text">
+             <string>音量</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="volumeSlider">
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="value">
+             <number>50</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="toolLayout">
+          <item>
+           <widget class="QPushButton" name="playModeButton">
+            <property name="text">
+             <string>顺序播放</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="dlnaButton">
+            <property name="text">
+             <string>DLNA</string>
             </property>
            </widget>
           </item>
@@ -264,27 +190,8 @@
      <height>30</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menu">
-    <property name="title">
-     <string>文件</string>
-    </property>
-    <addaction name="actionOpenFolder"/>
-    <addaction name="separator"/>
-    <addaction name="actionExit"/>
-   </widget>
-   <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionOpenFolder">
-   <property name="text">
-    <string>打开文件夹</string>
-   </property>
-  </action>
-  <action name="actionExit">
-   <property name="text">
-    <string>退出</string>
-   </property>
-  </action>
  </widget>
  <resources/>
  <connections/>
